--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,8 +17,8 @@ paparazzi = "1.3.3"
 # Android
 min-sdk = "28"
 compile-sdk = "34"
-version-name = "2025.07.17"
-version-code = "206"
+version-name = "v1.1.0 (18.08.2025)"
+version-code = "207"
 jvm-target = "17"
 
 
