Google Drive Backup, Restore & Scheduled Auto Backups (Closes #2)
This is a major feature release that introduces a complete and robust data backup and restore solution powered by Google Drive. This gives you peace of mind and makes it easier than ever to manage your data across devices.

### What's New
* **Google Drive Backup & Restore**
    You can now securely back up your entire app data to a private folder in your Google Drive. Simply navigate to **Menu > Settings > Backup to Google Drive** and sign in with your Google account. From there, you can create new encrypted backups or restore from a list of your previous saves.

* **Scheduled Auto-Backups**
    Set it and forget it! The new **Scheduled Backups** screen allows you to configure automatic backups. Choose a frequency (**Daily, Weekly, or Monthly**) and a specific time of day to ensure your data is always protected without any manual effort.

* **Restore on First Launch**
    Setting up a new phone or reinstalling the app is now a breeze. On the welcome screen, you'll see a new option to sign in with Google and **restore from a cloud backup**, completely skipping the manual setup wizard and getting you back to your data instantly.

* **Automatic Profile Naming**
    For a smoother onboarding experience, the app will now conveniently use the name from your connected Google account as your default profile name, saving you a step during setup.

Closes #2

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -108,6 +108,8 @@ google-services-plugin = { module = "com.google.gms:google-services", version = 
 google-play-update = { module = "com.google.android.play:app-update", version = "2.1.0" }
 google-play-services = { module = "com.google.android.gms:play-services-tasks", version = "18.2.0" }
 google-play-review = { module = "com.google.android.play:review-ktx", version = "2.0.1" }
+google-drive = { module = "com.google.android.gms:play-services-drive", version = "17.0.0" }
+google-auth = { module = "com.google.android.gms:play-services-auth", version = "21.2.0" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "19.0.3" }
 firebase-crashlytics-gradle-plugin = { module = "com.google.firebase:firebase-crashlytics-gradle", version = "3.0.2" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore", version = "25.1.4" }
@@ -213,7 +215,9 @@ glance = [
 google = [
     "google-play-update",
     "google-play-services",
-    "google-play-review"
+    "google-play-review",
+    "google-drive",
+    "google-auth"
 ]
 firebase = [
     "firebase-crashlytics"
