--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,16 @@ android.useAndroidX=true
 android.enableJetifier=false
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-# Speed-up Gradle Builds! (OPTIMIZATION)
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.configuration-cache=true
+# Gradle/JVM settings (increase memory, keep UTF-8)
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+org.gradle.daemon=true
+
+# Disable configuration cache to avoid daemon instability during development
+org.gradle.configuration-cache=false
+
+# Use in-process Kotlin compilation to avoid kotlin daemon crash on some Windows setups
+kotlin.compiler.execution.strategy=in-process
+
+# Give the Kotlin compiler more heap when daemon is used
+kotlin.daemon.jvm.options=-Xmx2048m
 
